修改后台管理的category，加上swagger
